<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:adjustViewBounds="true"
            android:clickable="false"
            android:enabled="false"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/drink" />

        <Button
            android:id="@+id/btn_eat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ACTION_EAT" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:adjustViewBounds="true"
            android:clickable="false"
            android:enabled="false"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/sleep" />

        <Button
            android:id="@+id/btn_sleep"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ACTION_SLEEP" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:adjustViewBounds="true"
            android:clickable="false"
            android:enabled="false"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/cry" />

        <Button
            android:id="@+id/btn_cry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            android:text="@string/ACTION_CRY" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:adjustViewBounds="true"
            android:clickable="false"
            android:enabled="false"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/relax" />

        <Button
            android:id="@+id/btn_relax"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ACTION_RELAX" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:adjustViewBounds="true"
            android:clickable="false"
            android:enabled="false"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/bath" />

        <Button
            android:id="@+id/btn_takebath"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ACTION_TAKE_BATH" />
    </LinearLayout>
</LinearLayout>